--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 
 /.vs/Refine/FileContentIndex/5725c42a-11b8-4568-adde-7d0fce15b223.vsidx
 /.vs/Refine/FileContentIndex/58594917-f475-4e4b-8967-a9b74054b4cb.vsidx
+*.vsidx
